# skylines

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
benchmarks/: CMakeLists.txt  benchmarks.cpp  benchmarks_all.cpp  benchmarks_gpu_compare.cpp  benchmarks_new.cpp  time.hpp
cmake/: post_copy_dlls.cmake  util.cmake
doc/Journal/: MultEucSpatialSkylines.tex
doc/Journal/img/: DomNotDom.eps  FFIntBisectorCH.eps  FarthestSkylineExample.eps  NFIntBisectorCH.eps  SSQExample1.eps  knnExample.eps  knnExampleWeights.eps
doc/KBSJournal/: CoverLetterKBS.docx  Highlights.docx  MultEucSpatialSkylinesReorg7.tex  Skylines results.xlsx
doc/KBSJournal/img/: 250_20_0_1_uw_F.eps  250_20_0_1_uw_F_t20.eps  250_20_0_1_uw_N.eps  250_20_0_1_uw_N_t20.eps  250_20_p15_p85_1a10_F.eps  250_20_p15_p85_1a10_F_t20.eps  250_20_p15_p85_1a10_N.eps  250_20_p15_p85_1a10_N_t20.eps  FFIntBisectorCH_.eps  NFIntBisectorCH_.eps  NFOnlyE.eps  NFOnlyE_.eps  P3_q2.eps  RegNonDominance3.eps  SSQExample0_nou.eps  SSQExample1.eps  SSQExample1_nou.eps  TraditSkyline.eps  algorithm_DS.eps  algorithm_DT.eps  algorithm_PA.eps  algorithm_PA_1Point.eps  algorithm_PA_tk.eps  bcn_area.eps  bcn_area_2.eps  bcn_farthest_all.eps  bcn_farthest_all_1less.eps  bcn_nearest_all.eps  bcn_nearest_all_1less.eps  bcn_nearest_all_bcn.eps  bcn_nearest_top5.eps  bcn_nearest_top5_1less.eps  bisectors_w.eps  ch.eps  comp_f_sb.eps  comp_n_sb.eps  furthest_skylines.eps  generalized_SSP.eps  improvement_farthest.eps  improvement_nearest.eps  (+22 more)
src/: CMakeLists.txt  export_import.hpp
src/error/: error_handler.hpp
src/skylines_engine/: CMakeLists.txt  export_import.hpp
src/skylines_engine/common/: irenderable.hpp  skyline_element.hpp  time.hpp
src/skylines_engine/error/: error_descriptor.cpp  error_descriptor.hpp  error_handler.cpp  error_handler.hpp  errors.hpp  errors_severity.hpp  return_codes.hpp  thread_errors_stack.hpp  threads_errors.hpp
src/skylines_engine/gpu/: gpu_devices.cpp  gpu_devices.hpp  gpu_memory.cpp  gpu_memory.hpp  gpu_stream.hpp
src/skylines_engine/log/: logger.cpp  logger.hpp
src/skylines_engine/queries/: InputData.hpp  OutputData.hpp  data.hpp  data_capable.cpp  data_capable.hpp  input_data.cpp  input_data.hpp  output_data.hpp  weighted.cpp  weighted.hpp
src/skylines_engine/queries/algorithms/: algorithm.cpp  algorithm.cuh  algorithm.hpp  distance_type.hpp  gpu_brute_force.cpp  gpu_brute_force.cu  gpu_brute_force.hpp  gpu_brute_force_discarting.cpp  gpu_brute_force_discarting.cu  gpu_brute_force_discarting.hpp  gpu_common.cuh  multi_thread_brute_force.cpp  multi_thread_brute_force.hpp  multi_thread_brute_force_discarding.cpp  multi_thread_brute_force_discarding.hpp  multi_thread_sorting.cpp  multi_thread_sorting.hpp  single_thread_brute_force.cpp  single_thread_brute_force.hpp  single_thread_brute_force_discarting.cpp  single_thread_brute_force_discarting.hpp  single_thread_sorting.cpp  single_thread_sorting.hpp  skylines_gpu.cu  test.cu
src/skylines_engine/queries/data/: data_structures.hpp  random_generator.hpp  stadistics.hpp
src/skylines_ui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  mainwindow.ui  ui_options.hpp
src/skylines_ui/main_window/: main_window.cpp  main_window.hpp  main_window.ui  ui_options.hpp
src/skylines_ui/ogl/: camera.cpp  camera.hpp  ogl_widget.cpp  ogl_widget.hpp
tests/blackbox/: CMakeLists.txt  cpu_stbf_bbtest.cpp  time_utils.hpp
